Update HOW TO BE DEVELOPER

--- a/netbsd/how_to_be_developer.html
+++ b/netbsd/how_to_be_developer.html
@@ -22,8 +22,18 @@
 <h3>僕の場合</h3>
 <p>大学3年生冬の研究室配属ののち、研修で触ったのがNetBSDでした。卒業論文のために書いたプログラムはNetBSDに完全に依存していて、修士論文もまた同様でした。これは自発的に（無論、研究テーマを決めたのは自分自身）NetBSDを使い始めたというわけではなく、なりゆきでそうなったと言うのが正しいと思います。</p>
 
+<p>おそらくはじめに使わされたのがOpenBSDならOpenBSDの開発者を目指したと思います。UbuntuならUbuntuに貢献しようと思い立っていたのかもしれません。理由はとにかく、まずは使わせること。それからFLOSSの文脈をきっかけになにかしらの貢献をさせるよう仕向けることが、開発者を増やすもっとも堅実な方法ではないでしょうか。</p>
+
 <h2>できそうなことを見つける</h2>
 <p>NetBSD/<code>pkgsrc(7)</code>を使っていく中で、少なからず不便に思った点や困った点が見つかるときがきます。それはカーネルやユーザランドプログラムの不具合に遭遇してしまったときかもしれませんし、求めているデバイスドライバが存在しないときかもしれませんし、ドキュメントが古くて調べものに時間がかかってしまったときかもしれません。そのとき、その問題を自分で解決したいと思ったのであれば、それはThe NetBSD Projectへ参加する動機になるでしょう。</p>
+
+<div class="referbox">
+<img src=/img/info.png alt="comment">
+<div class="text">
+<p><b>Do It Yourselfはどこから？</b></p>
+<p>なお、ここには飛躍があります。それは、利用者が公開されているソースコードを頼りに自力でなんとかしようとするだろうという前提で書かれているということです。「ただ使うだけ」の状態から「いざとなったら自分で直してみよう」という気持ちにさせるには、なにかしらの訓練が不可欠ではないかと考えています。これは難しいことですしどうすればいいのかもよくわかりません。本稿の範囲外です。</p>
+</div>
+</div>
 
 <h3>Project proposals for NetBSD</h3>
 <p>NetBSD Wikiの<a href="https://wiki.netbsd.org/projects/">Project proposals for NetBSD</a>には未解決・進行中のプロジェクトの一覧が載っています。もしあなたが問題解決好きなエンジニアであればこの中から自身のスキルと嗜好に合ったものを探してみるといいでしょう。しかし中には古い情報が含まれている可能性もあります。興味のあるプロジェクトを見つけたら、<a href="https://www.netbsd.org/mailinglists/">メーリングリスト</a>に興味がある旨を投稿するのが一番です。</p>
@@ -37,7 +47,7 @@
 <h2>できそうなことをある程度こなす</h2>
 <p>やりたいこと・やってみたいことが見つかったら、それを実際にやってみます。そしてその成果をなんらかの形で共有します。共有する方法はなんでもいいです。SNSでシェアしてもいいですし、FLOSS系のイベントやカンファレンスで少し時間をもらって発表してもいいです。とにかく、なんらかのやりたいことがあって、それを現実に実行していると他の開発者に伝えることが重要です。おそらくもっとも理解が深い人からの反響を得られるのは<a href="https://www.netbsd.org/mailinglists/">メーリングリスト</a>に成果や途中経過について投稿してみることでしょう。</p>
 
-<p>また<code>send-pr(1)</code>あるいは<a href="https://www.netbsd.org/support/send-pr.html">NetBSD Problem Reports</a>を通じて不具合の報告やパッチの投稿ができます。プロジェクト公式のフォームからなにかしらの貢献をするとそれが実績として認められ、開発者申請のアピールポイントにもなるようです。ぜひ活用してみてください。</p>
+<p>また<code>send-pr(1)</code>あるいは<a href="https://www.netbsd.org/support/send-pr.html">NetBSD Problem Reports</a>を通じて不具合の報告やパッチの投稿ができます。プロジェクト公式のフォームからなにかしらの貢献をするとそれが実績として認められ、開発者申請のアピールポイントにもなるようです。コミット権を持っていない人が自分のコードをアップストリームに反映させられる手段のひとつですので、ぜひ活用してみてください。</p>
 
 <h3>僕の場合</h3>
 <p>成果をAsiaBSDConや日本NetBSDユーザーズグループのBoFで発表しました。成果物があまりにも特定分野に偏りすぎているがために特定のユーザコミュニティ内で成果発表をしないとあまり意味がない場合もあります。GNU/LinuxやLinuxカーネルならまだしも、*BSDはまさにこの典型です。</p>
