WIP: Update section about price of reading old books

--- a/essay/floss_reading.html
+++ b/essay/floss_reading.html
@@ -19,7 +19,21 @@
 <p>一方でFLOSS関係の書籍は著作権の都合で、作者がGNU Free Documentation License（GFDL）やなにかしらのCreative Commonsを適用していない限り再頒布できません。本を集めるにはお金がかかり、その本の価格は中古市場の経済によって決定されます。このような障壁についても少し述べたいと思います。</p>
 
 <h2>2019年からみたFLOSS書籍最盛期</h2>
+<p>FLOSSの技術書はいまでも頻繁に出版されています。一方でFLOSS文化の評論やエッセイはまったく見当たりません。FLOSSが基盤として欠かせない存在になり、FLOSSが湯水のごとく流通している現在では、わざわざ本を書いてまでFLOSSの意義やビジネスモデルなどを説明する必要がなくなったのかもしれません。</p>
+
+<p>FLOSSについて書かれた日本語の書籍は2000年代前後あたりが出版のピークのように見えます。根拠は僕が所有しているFLOSS系の書籍がほとんどその年代に出版されていることです。弱い根拠かもしれませんが、Amazonで「オープンソース」と調べて出てくるものはおおよそ揃えているので、大きく的を外した見解ではないでしょう。また「オープンソース」という言葉そのものが産まれたのは1998年2月3日です。オープンソース運動が日本にまで伝播し、書籍が執筆・翻訳されて出版される時間を考えると、ちょうど良さそうな時期でもあります。</p>
+
 <h2>古いFLOSS書籍は読むに値するか</h2>
+<p>一方で2000年代前後というと19〜10年前の時代です。技術が進歩していく速度から「ドッグイヤー」とも呼ばれるような業界からすれば、古さという欠点がどうしても浮かび上がってしまいます。IT業界はモダンな開発手法やプログラミング言語がもてはやされやすいという体質もあり、それがこの欠点をなお引き立たせています。</p>
+
+<p>しかしFLOSSの文化や思想あるいはビジネスモデルの転換は、プログラミング言語やフレームワークなどと比べると、比較的ゆっくりとした速度で進んでいるのが現実です。GNU General Public License（<a href="https://www.gnu.org/licenses/old-licenses/gpl-1.0.html">GPLv1</a>）は1989年に発行されましたが、最新バージョンである<a href="https://www.gnu.org/licenses/gpl-3.0.html">GPLv3</a>は2007年に発行されました。単純に、GPLはFLOSSをとりまくビジネスモデルや法律の変化に応じて改訂されていると考えるのであれば、過去30年間で2回しか改訂がなかったGPLはこの主張の裏付けとなるでしょう。</p>
+
+<p>またFLOSS文化の根底にある「共有」の文化は様々な分野へ浸透していきました。たとえば自身の作品に対してCreative Commons License（CC License）を任意のレベルで適用することで、再利用や再頒布の条件を明確にしたまま作品を流通させられるようになったのです。FLOSS文化だけを根として発展したかどうかは断言できませんが、オープンデザインやオープンサイエンス、デジタルファブリケーションといったムーヴメントも、根底には「共有」の文化があります。</p>
+
+<p>思想的にも大きなパラダイムはまだないように思えます。StallmanのFree Software運動から、商業プロモーションを目的としてOpen Source運動が広まりました。Stallmanが、中立になりたければFLOSSという言葉を使うよう推奨した（『<a href="https://www.gnu.org/philosophy/floss-and-foss.html">FLOSS and FOSS</a>』）のは最近の話（初版がいつアップロードされたのかは不明。Copyrightの年をみるにおそらく2013年）ですが、根底の思想には大した影響はありません。</p>
+
+<p>古いFLOSS書籍は読むに値するか？という疑問に対しては次のように答えられます。技術と違ってパラダイムは滅多に変わらない点、現代の「共有」の流行に少なくともFLOSS文化が一役買っている点を考慮すると、十数年前の書籍でも読む値打ちは十分にあります。</p>
+
 <h2>価格・流通という問題</h2>
 <h2>FLOSSを語る出版物は自由であるべき</h2>
 
