--- a/essay/floss_reading.html
+++ b/essay/floss_reading.html
@@ -35,7 +35,32 @@
 <p>古いFLOSS書籍は読むに値するか？という疑問に対しては次のように答えられます。技術と違ってパラダイムは滅多に変わらない点、現代の「共有」の流行に少なくともFLOSS文化が一役買っている点を考慮すると、十数年前の書籍でも読む値打ちは十分にあります。</p>
 
 <h2>価格・流通という問題</h2>
-<h2>FLOSSを語る出版物は自由であるべき</h2>
+<p>古い書籍でも読む価値は十分にあるとした上で、次に問題となるのは価格です。当然、多くを中古市場から買うことになります。が、本によっては定価よりも高い値段がつけられています。</p>
+
+<p>たとえば氷山素子『デーモン君のソース探検』は2004年に出版され税抜き価格2200円で発売されていましたが、現在Amazonでは最低価格が4415円です。</p>
+
+<img src="./img/001_floss_reading.png" alt="Example of used book price">
+
+<p>Stallman『フリーソフトウェアと自由な社会』は2003年に出版され税抜価格3200円でしたが、同じくAmazonでは5448円から売り出されています。</p>
+
+<img src="./img/002_floss_reading.png" alt="Example of used book price">
+
+<p>内容の優劣に関わらず「とりあえず希少そうだから」といった感じで値段付けされている場合もあります。小碇暉雄『オープンソースで人が繋がる』はFLOSS書籍の中で特に重要な古典でも、優れたFLOSS観が述べられているわけでもありませんが、定価525円から中古価格6038円へ大高騰しています。</p>
+
+<img src="./img/003_floss_reading.png" alt="Example of used book price">
+
+<p>これらは極端な例で、ほとんどは定価以下の価格で購入できます。しかしこれらのような例もあるので、いまは安くても、FLOSSについて語る本は時間が経つにつれてプレミアがつきどんどん高騰していくという懸念もできます。本来は文化・知識の共有のために印刷された本が、中身よりもその本自体の希少性に目をつけられ高値で中古市場で売買されてしまいます。このような傾向は、FLOSS文化研究をする身からすれば危機と言えます。</p>
+
+<h2>出版物は自由であるべき</h2>
+<p>フリーソフトウェア運動をきっかけに「共有」の文化が根付き、様々な分野へ枝分かれしていきました。FLOSS文化とはなにか、現代の「共有」ムーヴメントを根底から見直すにはどうすればいいかを考えたとき、FLOSS書籍を読み直してみるのはアプローチのひとつとして有効であると考えられます。一方で書籍は中古市場でのプレミア付けが始まっており、経済的に手を出しづらくなっています。</p>
+
+<p>FLOSS書籍について俯瞰した最後に、商業・個人出版に関係なくFLOSS書籍はすべてクリエイティブ・コモンズライセンスの下に使用許可を与えるべき、あるいは利用・再頒布のための条件を明記しておくべきだと主張します。本のテキストを共有する活動はいまに始まったものではありません。Stallman『フリーソフトウェアと自由な社会』は各エッセイに対して「本文に一切の変更を加えず、この著作権表示を残す限り、この文章全体のいかなる媒体における複製および頒布も許可する。」と利用条件を明記しています。Sam Williams『FREE AS IN FREEDOM』（2002）はGFDLの下に出版されており、オライリーの『プログラマ／プロジェクト・マネジャー／ソフトウェアアーキテクトが知るべき97のこと』シリーズはそれぞれのエッセイがクリエイティブ・コモンズ表示3.0です。</p>
+
+<p>この主張をするモチベーションは、第一にほとんどのFLOSS書籍を出版社が再版せず、流通を中古市場に任せている点。第二に著者の利益がないにも関わらず中古市場で書籍の価格が高騰している点。第二に再版の望みがないのに関わらず無駄に長い著作権保護期間によって不特定多数への再頒布が困難な点からきています。Lawrence Lessigが「ほとんどの創造的作品が実際に持っている商業的な寿命はほんの数年だ。ほとんどの本は一年で絶版になる。その後、古本は著作権規制とは関係なしに取引される。」（『FREE CULTURE』, p164）と述べているように、どうせ商業的な寿命が短いのであれば最初から再頒布のための条件を明確にしておいて、少数の後人のために権利を緩めておけばいいのです。</p>
+
+<p><a href="https://comiket.co.jp">コミックマーケット</a>以外にも<a href="https://techbookfest.org/">技術書典</a>や<a href="https://gishohaku.dev/">技術書同人誌博覧会</a>といった個人が技術書を出版し販売できる場が増えた現在、これは特に声を大にして呼びかけたいことです。同人誌の電子版を委託販売できるサービスもあるので中古市場に関する議論は成立しませんが、著者が執筆を止めて委託販売も止まったとき「どう再頒布するか？」という問題が残るでしょう。</p>
+
+<p>文化継承のためにできることのひとつに、あなたが持っている過剰な権利を緩めるというものがあります。物書きをしたときどのような権利が与えられるのか、その権利にはどのような負の側面があるのか、それを解決するにはどう行動すればいいのかをFLOSS文化の文脈で考え直してみてはどうでしょうか。</p>
 
 <hr>
 <footer><div style="text-align:center;padding-top:2em;padding-bottom:2em;"><a rel="license" href="https://creativecommons.org/publicdomain/zero/1.0/"><img src="https://i.creativecommons.org/p/zero/1.0/88x31.png" alt="CC0" /></a></div><p>To the extent possible under law, <a href="mailto:uki@e-yuuki.org">Yuuki Enomoto</a> has waived all copyright and related or neighboring rights to e-yuuki.org. This work is published from: Japan.</p></footer></article></body></html>
