Update index for new essay

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
 </ul>
 <h3 id="essay">エッセイ</h3>
 <ul>
+<li><a href="./essay/freeware_or_freesoftware.html">フリーウェアはフリーソフトウェアであるべきか？</a></li>
 <li><a href="./essay/floss_reading.html">FLOSS書籍について</a></li>
 <li><a href="./essay/remote_work.html">リモートワーカーになった</a></li>
 <li><a href="./essay/practice_tdd.html">初めてのテスト駆動開発（TDD）と感想</a></li>
