Add Chapter 1 and 2

--- a/books/free_as_in_freedom/index.html
+++ b/books/free_as_in_freedom/index.html
@@ -18,8 +18,8 @@
 <ul style="list-style:none">
 <li><a href="./foreword.html">はしがき&emsp;リチャード・ストールマン</a></li>
 <li><a href="./preface.html">序文&emsp;サム・ウィリアムズ</a></li>
-<li>第一章&emsp;プリンタがなくて</li>
-<li>第二章&emsp;2001年ハッカーの旅</li>
+<li><a href="./chapter1.html">第一章&emsp;プリンタがなくて</a></li>
+<li><a href="./chapter2.html">第二章&emsp;2001年ハッカーの旅</a></li>
 <li>第三章&emsp;若いハッカーの肖像</li>
 <li>第四章&emsp;神を弾劾せよ</li>
 <li>第五章&emsp;自由の小さい水たまり</li>
