--- a/books/free_as_in_freedom/index.html
+++ b/books/free_as_in_freedom/index.html
@@ -22,7 +22,7 @@
 <li><a href="./chapter2.html">第二章 2001年ハッカーの旅</a></li>
 <li><a href="./chapter3.html">第三章 若いハッカーの肖像</a></li>
 <li><a href="./chapter4.html">第四章 神を弾劾せよ</a></li>
-<li>第五章 自由の小さい水たまり</li>
+<li><a href="./chapter5.html">第五章 自由の小さい水たまり</a></li>
 <li>第六章 Emacsコミューン</li>
 <li>第七章 截然とした道徳的選択</li>
 <li>第八章 聖イグヌーティウス</li>
