--- a/books/free_as_in_freedom/index.html
+++ b/books/free_as_in_freedom/index.html
@@ -24,7 +24,7 @@
 <li><a href="./chapter4.html">第四章 神を弾劾せよ</a></li>
 <li><a href="./chapter5.html">第五章 自由の小さい水たまり</a></li>
 <li><a href="./chapter6.html">第六章 Emacsコミューン</a></li>
-<li>第七章 截然とした道徳的選択</li>
+<li><a href="./chapter7.html">第七章 截然とした道徳的選択</a></li>
 <li>第八章 聖イグヌーティウス</li>
 <li>第九章 GPL</li>
 <li>第十章 GNU/Linux</li>
@@ -39,7 +39,7 @@
 
 <h2>この文書について</h2>
 
-<p>この文書はRichard M. Stallman『Free as in Freedom 2.0』<a href="http://haleakala-avenue.style.coocan.jp/lealea/?%E8%87%AA%E7%94%B1%E3%81%A8%E3%81%97%E3%81%A6%E3%81%AE%E3%83%95%E3%83%AA%E3%83%BC%282.0%29%E3%83%AA%E3%83%81%E3%83%A3%E3%83%BC%E3%83%89%E3%83%BB%E3%82%B9%E3%83%88%E3%83%BC%E3%83%AB%E3%83%9E%E3%83%B3%E3%81%A8%E8%87%AA%E7%94%B1%E3%82%BD%E3%83%95%E3%83%88%E3%82%A6%E3%82%A7%E3%82%A2%E9%9D%A9%E5%91%BD">邦訳版</a>のコピーです。HTMLタグを除き榎本は訳文を一切変更していません。この文書はGFDL 1.3でライセンスされているため、この文およびHTMLコードもGFDL下に置かれるはずです。GFDL 1.3に基づく利用はご自由にどうぞ。</p>
+<p>この文書はRichard M. Stallman『Free as in Freedom 2.0』<a href="http://haleakala-avenue.style.coocan.jp/lealea/?%E8%87%AA%E7%94%B1%E3%81%A8%E3%81%97%E3%81%A6%E3%81%AE%E3%83%95%E3%83%AA%E3%83%BC%282.0%29%E3%83%AA%E3%83%81%E3%83%A3%E3%83%BC%E3%83%89%E3%83%BB%E3%82%B9%E3%83%88%E3%83%BC%E3%83%AB%E3%83%9E%E3%83%B3%E3%81%A8%E8%87%AA%E7%94%B1%E3%82%BD%E3%83%95%E3%83%88%E3%82%A6%E3%82%A7%E3%82%A2%E9%9D%A9%E5%91%BD">邦訳版</a>のコピーです。HTMLタグや注の記号、原邦訳文の誤字を除き榎本は訳文を一切変更していません。この文書はGFDL 1.3でライセンスされているため、この文およびHTMLコードもGFDL下に置かれるはずです。GFDL 1.3に基づく利用はご自由にどうぞ。</p>
 
 <hr>
 <footer><div style="text-align:center;padding-top:2em;padding-bottom:2em;"><a rel="license" href="https://www.gnu.org/licenses/fdl-1.3.html"><img src="https://www.gnu.org/graphics/gfdl-logo-small.png" alt="GFDL-1.3" /></a></div><p>This is a Japanese translation of Free as in Freedom 2.0: Richard Stallman and the Free Software Revolution, a revision of Free as in Freedom: Richard Stallman’s Crusade for Free Software.</p><p>Copyright (C) 2002, 2010 Sam Williams</p><p>Copyright (C) 2010 Richard M. Stallman</p><p> Copyright (C) 2012 Yo Goto, Mitsuyosi Yuge</p><p>Permission is granted to copy, distribute and/or modify this document under the terms of the GNU Free Documentation License, Version 1.3 or any later version published by the Free Software Foundation; with no Invariant Sections, no Front-Cover Texts, and no Back-Cover Texts. A copy of the license is included in the section entitled "GNU Free Documentation License".</p></footer></article></body></html>
