--- a/books/free_as_in_freedom/index.html
+++ b/books/free_as_in_freedom/index.html
@@ -25,7 +25,7 @@
 <li><a href="./chapter5.html">第五章 自由の小さい水たまり</a></li>
 <li><a href="./chapter6.html">第六章 Emacsコミューン</a></li>
 <li><a href="./chapter7.html">第七章 截然とした道徳的選択</a></li>
-<li>第八章 聖イグヌーティウス</li>
+<li><a href="./chapter8.html">第八章 聖イグヌーティウス</a></li>
 <li>第九章 GPL</li>
 <li>第十章 GNU/Linux</li>
 <li>第十一章 オープンソース</li>
