--- a/books/free_as_in_freedom/index.html
+++ b/books/free_as_in_freedom/index.html
@@ -26,7 +26,7 @@
 <li><a href="./chapter6.html">第六章 Emacsコミューン</a></li>
 <li><a href="./chapter7.html">第七章 截然とした道徳的選択</a></li>
 <li><a href="./chapter8.html">第八章 聖イグヌーティウス</a></li>
-<li>第九章 GPL</li>
+<li><a href="./chapter9.html">第九章 GNU 一般公衆ライセンス</a></li>
 <li>第十章 GNU/Linux</li>
 <li>第十一章 オープンソース</li>
 <li>第十二章 ハッカー地獄巡りの小旅行</li>
