--- a/books/free_as_in_freedom/index.html
+++ b/books/free_as_in_freedom/index.html
@@ -27,13 +27,13 @@
 <li><a href="./chapter7.html">第七章 截然とした道徳的選択</a></li>
 <li><a href="./chapter8.html">第八章 聖イグヌーティウス</a></li>
 <li><a href="./chapter9.html">第九章 GNU 一般公衆ライセンス</a></li>
-<li>第十章 GNU/Linux</li>
-<li>第十一章 オープンソース</li>
-<li>第十二章 ハッカー地獄巡りの小旅行</li>
-<li>第十三章 戦い続ける</li>
-<li>サム・ウィリアムズからのエピローグ 孤独を打ち破って</li>
-<li>付録A ハック、ハッカー、ハッキング</li>
-<li>付録B GFDL</li>
+<li><a href="./chapter10.html">第十章 GNU/Linux</a></li>
+<li><a href="./chapter11.html">第十一章 オープンソース</a></li>
+<li><a href="./chapter12.html">第十二章 ハッカー地獄巡りの小旅行</a></li>
+<li><a href="./chapter13.html">第十三章 戦い続ける</a></li>
+<li><a href="./epilogue.html">サム・ウィリアムズからのエピローグ 孤独を打ち破って</a></li>
+<li><a href="./appendixA.html">付録A ハック、ハッカー、ハッキング</a></li>
+<li><a href="./appendixB.html">付録B GFDL</a></li>
 </ul>
 </nav>
 
