Copy complete: FREE AS IN FREEDOM

--- a/books/free_as_in_freedom/index.html
+++ b/books/free_as_in_freedom/index.html
@@ -31,7 +31,7 @@
 <li><a href="./chapter11.html">第十一章 オープンソース</a></li>
 <li><a href="./chapter12.html">第十二章 ハッカー地獄巡りの小旅行</a></li>
 <li><a href="./chapter13.html">第十三章 戦い続ける</a></li>
-<li><a href="./epilogue.html">サム・ウィリアムズからのエピローグ 孤独を打ち破って</a></li>
+<li><a href="./epilogue.html">サム・ウィリアムズからのエピローグ 孤独を打ち破る</a></li>
 <li><a href="./appendixA.html">付録A ハック、ハッカー、ハッキング</a></li>
 <li><a href="./appendixB.html">付録B GFDL</a></li>
 </ul>
