Add link to books

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 <li><a href="#papers">論文や発表資料</a></li>
 <li><a href="#log">コミュニティログ</a></li>
 <li><a href="#links">外部リンク</a></li>
+<li><a href="#free_documents">自由な文書の一覧</a></li>
 <li><a href="#fingerprint">フィンガープリント</a></li>
 <li><a href="#conventions">表記について</a></li>
 <li><a href="#about">このサイトについて</a></li>
@@ -88,6 +89,11 @@
 <dt><a href="http://amzn.asia/8Dd8gHg"><b>Amazon Wish List</b></a></dt>
 <dd>Amazonの欲しいものリストです。</dd>
 </dl>
+
+<h2 id="free_documents">自由な文書の一覧</h2>
+<ul>
+<li>Sam Williams, Richard M. Stallman, 後藤洋 弓削光好 訳, 『<a href="./books/free_as_in_freedom/index.html">自由としてのフリー(2.0) リチャード・ストールマンと自由ソフトウェア革命</a>』</li>
+</ul>
 
 <h2 id="fingerprint">フィンガープリント</h2>
 <pre><code>B684 4BF2 9CD4 961F 510A  8121 7B4D FF44 2348 20B8</code></pre>
