Add link to Preface

--- a/books/free_as_in_freedom/preface.html
+++ b/books/free_as_in_freedom/preface.html
@@ -23,7 +23,7 @@
 
 <p>数年前なら、これをアップルの共同創業者スティーブ・ジョブスの無敵の成功に敬意を表して「iPod 効果」と呼んだかもしれない。 ジョブスは、音楽業界とデジタル音楽リスナーとの間にあった積年の相互不信と敵対関係を脇に追いやり、音楽業界とデジタル音楽リスナーをアップルの iPod という単一の魅力的な装置と iTunes という制限的なライセンス制度の回りに呼び集めた。 今、雑誌や新聞に記事を書くなら、ブランド名の進化に遅れず、新聞ジャーナリズムや電子書籍出版の領域で起こっている並行的で地殻変動的な変化を認知するためにも、 たぶんそれを「iPad 効果」とか「Kindle 効果」と呼ぶ必要があるだろう。</p>
 
-<p>上述のブランド名を無闇に宣伝していると受け取られないように、RMS は、特にソフトウェアの自由の領域でそれらがもつ多くの欠点をていねいに説明する二つのウェブサイトに等しく言及することを提案する。私は、この均等な時間配分の精神に賛成した。彼が推奨するウェブサイトは、DefectiveByDesign.org と BadVista.org だ。</p>
+<p>上述のブランド名を無闇に宣伝していると受け取られないように、RMS は、特にソフトウェアの自由の領域でそれらがもつ多くの欠点をていねいに説明する二つのウェブサイトに等しく言及することを提案する。私は、この均等な時間配分の精神に賛成した。彼が推奨するウェブサイトは、<a href="https://www.defectivebydesign.org/">DefectiveByDesign.org</a> と <a href="http://badvista.fsf.org/">BadVista.org</a> だ。</p>
 
 <p>根拠とは関係なく、急速に変化する世界の中で企業ブランドがソフトウェア品質の唯一の保証人だとする観念は、大半の企業ブランドが歴史的最安値で売却されている時代でさえ、依然として抜き難いものの一つだ。</p>
 
@@ -41,7 +41,7 @@
 
 <p>私は、二つの大きな理由を提供できる。</p>
 
-<p>最初の理由は、個人的だ。『自由としてのフリー』のエピローグに記したように、あの本の出版の少し前に友情的とはいえない形でリチャードと私の連絡が途絶した。責任の大部分は私にあった。伝記的スケッチが自由ソフトウェアの諸原理と衝突しないようにリチャードと一緒に作業をしていて、-- 著作権の仕組みとして GFDL を使った最初の著作の一つとして『自由としてのフリー』を作ったのは成果の一つだったと誇りを持って言いたいが -- 本を編集して、リチャードから届いた誤り訂正の長大なリストと明確化の注文を取り込む段になって、突然、私は協力関係を終わらせてしまった。</p>
+<p>最初の理由は、個人的だ。『自由としてのフリー』のエピローグに記したように、あの本の出版の少し前に友情的とはいえない形でリチャードと私の連絡が途絶した。責任の大部分は私にあった。伝記的スケッチが自由ソフトウェアの諸原理と衝突しないようにリチャードと一緒に作業をしていて、&mdash;&mdash;著作権の仕組みとして GFDL を使った最初の著作の一つとして『自由としてのフリー』を作ったのは成果の一つだったと誇りを持って言いたいが&mdash;&mdash;本を編集して、リチャードから届いた誤り訂正の長大なリストと明確化の注文を取り込む段になって、突然、私は協力関係を終わらせてしまった。</p>
 
 <p>著作者の独立性やジャーナリストの客観主義といった自らの原則の後ろに逃げ込むこともできたが、出版社のオライリーに時間の猶予をもらわなかった事を私はずっと後悔していた。オライリーはすでに私の主な契約条件の一つ（GFDL）を承諾し、締切間際の大量の変更をがまんしてくれており、私は自分の運をさらに試すことをためらったのだ。</p>
 
@@ -65,7 +65,7 @@
 
 <p>この本を読まないわけにはいかないと感じるべき二番目の理由は、この序文の最初の主題に戻る。2010年に我々の前にある未来は、今も振り返ると目に浮かぶ2000年の未来と何と違っていることだろう。私は正直でありたい。多くのアメリカ人（そして非アメリカ人）のように、私の世界観は、2001年9月11日の事件によって変わった。それはとても大きかったので、『自由としてのフリー』の出版後間もなく、私の関心は、自由ソフトウェア運動とそれを正しい方向へ進ませようとするストールマンの努力とは全く別のことへ移っていった。私は大きな傾向と主な論点はなんとか追い続けていたが、ソフトウェア標準をめぐる日々のドラマやソフトウェア著作権やソフトウェア特許は、大部分を読み飛ばしてしまう何かになっていた。要するに、インターネットのニュースに対する関心は地方紙の水道委員会の記事並みになっていた。</p>
 
-<p>[ RMS: 本書ではこれ以降2001年9月の攻撃への言及はないが、ここに短くコメントしておく価値はある。多くの言明のように「すべてを変化させる」ものとはほど遠く、攻撃は実際のところアメリカをわずかに変えただけだった。権力の座には相変わらず我々の自由を嫌うならず者たちがいる。主な違いは、今は、彼らが自由を奪う法律の口実として「テロリスト」を持ち出せるようになったことにすぎない。これについて、さらに読みたい方は、stallman.org の政治ノート（the political notes）を参照してほしい。]</p>
+<p>[ RMS: 本書ではこれ以降2001年9月の攻撃への言及はないが、ここに短くコメントしておく価値はある。多くの言明のように「すべてを変化させる」ものとはほど遠く、攻撃は実際のところアメリカをわずかに変えただけだった。権力の座には相変わらず我々の自由を嫌うならず者たちがいる。主な違いは、今は、彼らが自由を奪う法律の口実として「テロリスト」を持ち出せるようになったことにすぎない。これについて、さらに読みたい方は、<a href="https://stallman.org">stallman.org</a> の政治ノート（the political notes）を参照してほしい。]</p>
 
 <p>これは大部分嘆かわしい展開だ。なぜなら、10年かかってやっと透明であると信じられる光の中で、私は成熟しつつある21世紀を見ているからだ。あらためて、編集者に売り込む言葉にするなら、私はそれを『プロセスの世紀』と呼ぶだろう。</p>
 
