Change "ヴァージョン" to "バージョン"

--- a/books/free_as_in_freedom/epilogue.html
+++ b/books/free_as_in_freedom/epilogue.html
@@ -70,11 +70,11 @@
 
 <p>それがなければ、私達はいつでもアメとムチのアプローチを取れたね、とヘニングは言った。アメは、ハッカーコミュニティ内部の倫理を称賛する電子書籍を出版することによるパブリシティーだ。ムチは、ハッカー倫理にもとる電子書籍の出版に伴うリスクだ。私達は、ドミトリー・スクリャーロフがインターネットの大義の象徴になる 9 ヶ月前に、気鋭のプログラマが電子書籍をハックする方法を公開するのは時間の問題だということを知っていた。また、ストールマンの[暗号化した]電子書籍を大出版社がリリースすれば、それは表紙に、ソフトウェア的に「この電子書籍を盗んでごらん」と書くようなものだということも。</p>
 
-<p>ヘニングと会った後、ストールマンに電話した。アメをもっと魅力的にできないものかと願いつつ、私は可能な妥協案についていくつか議論した。本の内容を出版社が[二重]ライセンスでリリースする、というのはどうだろう。自由ソフトウェアの文房具ソフトウェア集であるオープンオフィスでサン・マイクロシステムズが採用したように。出版社は電子書籍の DRM で制限された[その通常の]形式のヴァージョンをリリースすることができて[<a href="#note2">2</a>]、電子書籍につきもののあらゆる飾りものを利用できる一方で、美しさには劣るが、喜ばしい HTML 版をリリースするのだ。</p>
+<p>ヘニングと会った後、ストールマンに電話した。アメをもっと魅力的にできないものかと願いつつ、私は可能な妥協案についていくつか議論した。本の内容を出版社が[二重]ライセンスでリリースする、というのはどうだろう。自由ソフトウェアの文房具ソフトウェア集であるオープンオフィスでサン・マイクロシステムズが採用したように。出版社は電子書籍の DRM で制限された[その通常の]形式のバージョンをリリースすることができて[<a href="#note2">2</a>]、電子書籍につきもののあらゆる飾りものを利用できる一方で、美しさには劣るが、喜ばしい HTML 版をリリースするのだ。</p>
 
-<p>ストールマンは私に、[二重ライセンスの]考え方はかまわないが、自由にコピー可能な版を制限付きのヴァージョンより劣ったものにするような考え方はおぞましいと告げた。それに[二番目の考えについて、今回は、そもそも違っている。なぜなら自分には]結果をコントロールする方法がある、とストールマンは言った。協力を断ればよいのだ。</p>
+<p>ストールマンは私に、[二重ライセンスの]考え方はかまわないが、自由にコピー可能な版を制限付きのバージョンより劣ったものにするような考え方はおぞましいと告げた。それに[二番目の考えについて、今回は、そもそも違っている。なぜなら自分には]結果をコントロールする方法がある、とストールマンは言った。協力を断ればよいのだ。</p>
 
-<p>[ RMS: 問題は、制限されたヴァージョンに私が同意するのが正しいのかどうか、ということだった。私は、サンのオープンオフィスの自由ヴァージョンを支持できる、なぜなら、それは自由ソフトウェアだし何もないよりずっと良いからだ。他方、同時に、自由ではないヴァージョンはお断りである。ここに自己矛盾はない。サンにとって、自由ではないヴァージョンを出すのに私の了解を得る必要はないからだ。その存在に私の責任はない。この場合には、自由にコピーできないヴァージョンを私が了解すれば、その責任は私が負わなければならなかっただろう。]</p>
+<p>[ RMS: 問題は、制限されたバージョンに私が同意するのが正しいのかどうか、ということだった。私は、サンのオープンオフィスの自由バージョンを支持できる、なぜなら、それは自由ソフトウェアだし何もないよりずっと良いからだ。他方、同時に、自由ではないバージョンはお断りである。ここに自己矛盾はない。サンにとって、自由ではないバージョンを出すのに私の了解を得る必要はないからだ。その存在に私の責任はない。この場合には、自由にコピーできないバージョンを私が了解すれば、その責任は私が負わなければならなかっただろう。]</p>
 
 <p>私はさらに幾つかの提案をしたが無駄だった。ストールマンから引き出せた電子書籍に関する唯一のライセンスの制限は、ファイル共有形態への制限は「非商用的再配布」に限る、という譲歩 [ RMS: つまり、妥協の追加] だけだった。</p>
 
@@ -193,7 +193,7 @@
   <p>「<a href="http://www.hyuki.com/gnu/frcp.html">自由か著作権か？</a>」日本語訳 結城浩</p>
   </li>
 
-<li id="note2"><p>RMS: ウィリアムズは「商用」とここに書いていたが、それは誤用である。なぜなら、商用というのは「ビジネスと結びつけられている」こと意味するからだ。これらの全てのヴァージョンは会社がそれらを出版するなら、商用となるだろう。[訳注; 第一版では、「出版社は電子書籍につきもののあらゆる飾りものを利用した通常形式の電子書籍の商用版をリリースできる一方で、美しさには劣るがコピー可能な HTML 版をリリースするのだ」としていた。]</p></li>
+<li id="note2"><p>RMS: ウィリアムズは「商用」とここに書いていたが、それは誤用である。なぜなら、商用というのは「ビジネスと結びつけられている」こと意味するからだ。これらの全てのバージョンは会社がそれらを出版するなら、商用となるだろう。[訳注; 第一版では、「出版社は電子書籍につきもののあらゆる飾りものを利用した通常形式の電子書籍の商用版をリリースできる一方で、美しさには劣るがコピー可能な HTML 版をリリースするのだ」としていた。]</p></li>
 
 <li id="note3"><p>"<a href="http://my.safaribooksonline.com/termsofservice">Safari Tech Books Online; Subscriber Agreement: Terms of Service</a>"を参照。</p>
 
