--- a/books/free_as_in_freedom/preface.html
+++ b/books/free_as_in_freedom/preface.html
@@ -77,7 +77,7 @@
 
 <p>要するに、あなたが私のように、21世紀が20世紀よりも流血の少ない道を歩むのを見たいと願うタイプの人間なら、多くのじれったい外観を見せてはいるものの、水道委員会こそ、現在その戦いが行われている場所である。本書第一章冒頭のヴェルギリウスの題辞も示唆しているが、この本はインターネットの時代の叙事詩になるかもしれないという期待を私はずっと持っていた。それは、英雄的だが欠点もある中心人物をめぐって繰り広げられ、時とともに作者の刻印は霞んでいくような叙事詩である。</p>
 
-<p>そこで、私は、この序文を終えるときのいつものやり方、つまり、本文をさらに良くしたいと望むすべての読者からの貢献と変更を注文することでこの序文を終えたい。付録BのGNU自由文書ライセンス（GFDL; GNU Free Documentation License）があなたの権利や、変更を提案し、訂正を加え、さらには別の独立ヴァージョンをつくることの案内をしてくれる。もしも、リチャードまたは私を通じて変更することを望むだけなら、自由ソフトウェア財団のウェブサイトに適切な連絡情報がある。</p>
+<p>そこで、私は、この序文を終えるときのいつものやり方、つまり、本文をさらに良くしたいと望むすべての読者からの貢献と変更を注文することでこの序文を終えたい。付録BのGNU自由文書ライセンス（GFDL; GNU Free Documentation License）があなたの権利や、変更を提案し、訂正を加え、さらには別の独立バージョンをつくることの案内をしてくれる。もしも、リチャードまたは私を通じて変更することを望むだけなら、自由ソフトウェア財団のウェブサイトに適切な連絡情報がある。</p>
 
 <p>それではみなさん、グッド・ラック。この本を楽しまれよ！</p>
 
