WIP: Update unix command usage

--- a/introduction/usage.html
+++ b/introduction/usage.html
@@ -9,15 +9,15 @@
 <body><div class="tiny">
 <h1>Unixコマンドラインの操作方法</h1>
 <hr>
-<p>コマンドラインの操作方法は覚えることが多く学習に苦労します。しかしCUI上でのコマンド操作を覚えると、高速にファイルの探索やテキスト編集ができます。また普段使いの環境ならともかくサーバ運用をすると、コマンド操作を使わざるを得ないような状況に出くわします。Unixコマンドは覚えておいて損はないでしょう。</p>
+<p>コマンドラインの操作方法は覚えることが多く学習に苦労します。しかしCUI（Character User Interface）上でのコマンド操作を覚えると、高速にファイルの探索やテキスト編集ができます。普段使いの環境ならともかくサーバ運用をするとなると、コマンド操作を使わざるを得ないような状況に出くわします。Unixコマンドは覚えておいて損はないでしょう。</p>
 
-<p>一方で実際にCUI上で作業する必要があるにしても、操作の手順書が用意されているか、実行すべきコマンドが限られている・明記されている場合がほとんどです。たとえば「このディレクトリに移動してこのコマンドを実行せよ」、「このファイルをこのように編集してこのコマンドを実行せよ」といった具合です。このような指示が与えられたのであれば、指定のディレクトリに移動する方法さえわかってさえいればいいのです。したがって、このページでは必要最低限のコマンドのみを紹介するにとどめます。</p>
+<p>一方で実際にCUI上で作業する必要があるにしても、操作の手順書が用意されているか、実行すべきコマンドが限られている・明記されている場合がほとんどです。たとえば「このディレクトリ（directory）に移動してこのコマンドを実行せよ」、「このファイル（file）をこのように編集してこのコマンドを実行せよ」といった具合です。このような指示が与えられたのであれば、特定のディレクトリに移動する方法さえわかってさえいればいいのです。したがって、このページでは必要最低限のコマンドのみを紹介するにとどめます。</p>
 
 <ol>
 <li><a href="#path">絶対パスと相対パス</a></li>
 <li><a href="#pwd">現在位置を確認する</a></li>
-<li><a href="#cd">ディレクトリを移動する</a></li>
 <li><a href="#ls">ディレクトリの中身を見る</a></li>
+<li><a href="#cd">ディレクトリを移動する</a></li>
 <li><a href="#mkdir">ディレクトリを作る</a></li>
 <li><a href="#rmdir">ディレクトリを消す</a></li>
 <li><a href="#less">ファイルの中身を見る</a></li>
@@ -27,18 +27,78 @@
 </ol>
 
 <h2 id="path">絶対パスと相対パス</h2>
-<p>Unixのシステムはよくツリー状の構造になっていると言われます。頂点のルートディレクトリから枝が伸びているわけです。</p>
+<p>Unixのシステムは図1-1のように木構造となっています。頂点のルートディレクトリ（root directory）から枝が伸び、俯瞰すると樹木のようなかたちになっているわけです。</p>
 
 <figure style="text-align:center;">
 <img src="./img/usage_001.png" alt="Example of unix directory hiearchy">
-<figcaption><b>図1-1: </b>Unixのディレクトリ構造の例です。スペースの都合上省略していますが、実際はもっとディレクトリやファイルが存在します。この図では一部のみ抜粋しています。</figcaption>
+<figcaption><b>図1-1: </b>Unixのディレクトリ構造の例。スペースの都合上省略していますが、実際はもっとディレクトリやファイルが存在します。この図では一部のみ抜粋しています。</figcaption>
 </figure>
 
-<p>頂点のルートディレクトリから見たディレクトリやファイルの所在を「絶対パス」と呼びます。現在のディレクトリを「カレントディレクトリ」と呼びますが、そのカレントディレクトリから見たディレクトリやファイルの所在を「相対パス」と呼びます。たとえば図1-1を見てください。図中のファイル"myprog"の絶対パスは"/home/uki/src/myprog"です。一方"/home/uki"ディレクトリにいるユーザから見た"myprog"の相対パスは"src/myprog"または"./src/myprog"となります。ここで、"."（ドット）はカレントディレクトリをあらわします。</p>
+<p>頂点のルートディレクトリから見たディレクトリやファイルの所在を「絶対パス（absolute path）」と呼びます。ユーザが位置しているディレクトリを「カレントディレクトリ（current directory）」と呼びますが、そのカレントディレクトリから見たディレクトリやファイルの所在を「相対パス（relative path）」と呼びます。たとえば図1-2を見てください。図中のファイル<b>myprog</b>のパスは<b>/home/uki/src/myprog</b>です。一方<b>/home/uki</b>ディレクトリにいるユーザから見た<b>myprog</b>の相対パスは<b>src/myprog</b>または<b>./src/myprog</b>となります。ここで、「<b>.</b>（ドット）」はカレントディレクトリをあらわします。</p>
+
+<figure style="text-align:center;">
+<img src="./img/usage_002.png" alt="Example of absolute/relative path">
+<figcaption><b>図1-2: </b>絶対パスと相対パスの例。相対パスが示すディレクトリやファイルはカレントディレクトリによって決まります。</figcaption>
+</figure>
+
+<p>単に「パス」と書いてある場合、絶対パス・相対パスどちらを使っても構いません。</p>
 
 <h2 id="pwd">現在位置を確認する</h2>
-<h2 id="cd">ディレクトリを移動する</h2>
+<p>いまどこのディレクトリにいるのか、つまりカレントディレクトリを確認するには<code>pwd(1)</code>を実行します。</p>
+
+<pre><code><b class="user">pwd</b>
+/home/uki</code></pre>
+
+<p>キーボードから<code>pwd</code>と打鍵してEnterキーを入力すると、カレントディレクトリの絶対パスが画面に表示されます。この実行例では<b>/home/uki</b>がカレントディレクトリのようです。</p>
+
+<p>システム構築の手順書によっては、相対パスを用いてコマンド実行の指示をおこなうものもあります。相対パスが指し示すファイルやディレクトリはカレントディレクトリによって左右されます。したがって慣れないうちは常にカレントディレクトリを確認するといいでしょう。</p>
+
 <h2 id="ls">ディレクトリの中身を見る</h2>
+<p>ディレクトリの中身を表示するには<code>ls(1)</code>を実行します。</p>
+
+<pre><code><b class="user">ls</b>
+src
+<b class="user">file src</b>
+src: directory</code></pre>
+
+<p>この実行例では、カレントディレクトリに<b>src</b>というディレクトリかファイルがあるようです。一見どちらかわからないので<code>file(1)</code>コマンドで種類を判定してみたところ、ディレクトリだとわかりました。</p>
+
+<div class=referbox>
+<img src="/img/info.png" alt="info">
+<div class="text"><p>ディレクトリの中身を表示するにせよもっと効率よくファイルかディレクトリかを判別できないものでしょうか。実は多くのUnixコマンドでは、ユーザがコマンドへあるオプションを渡すことでコマンドの動作や出力結果を変更できます。そのオプションはコマンドによってそれぞれ異なります。コマンド特有のオプションを調べるにはオンラインマニュアルを読むのが一番ですが、Unixそのものに慣れないうちはGoogle検索に頼ってもいいでしょう。</p></div>
+</div>
+
+<p><code>ls(1)</code>にディレクトリへのパスを渡して実行すると、そのディレクトリの中身が出力されます。</p>
+
+<pre><code><b class="user">ls src</b>
+myprog</code></pre>
+
+<div class="referbox">
+<img src="/img/warn.png" alt="warn">
+<div class="text"><p>上記コマンドライン例では、<code>ls</code>のあとに半角スペースが1つ付いてます。コマンドにファイル名やディレクトリ名、オプションなどを渡すときは半角スペースで区切ることを忘れないでください。コマンド例に半角スペースがあるかどうかも注意し、その通り打鍵し実行しましょう。</p></div>
+</div>
+
+<h2 id="cd">ディレクトリを移動する</h2>
+<p>カレントディレクトリから別ディレクトリへ移動するには<code>cd(1)</code>を実行します。</p>
+
+<pre><code><b class="user">pwd</b>
+/home/uki
+<b class="user">ls</b>
+src
+<b class="user">cd ./src</b>
+<b class="user">pwd</b>
+/home/uki/src
+<b class="user">ls</b>
+myprog</code></pre>
+
+<p>オプションをなにもつけずに<code>cd(1)</code>すると、ログインユーザのホームディレクトリまで移動します。</p>
+
+<pre><code><b class="user">cd</b>
+<b class="user">pwd</b>
+/home/uki</code></pre>
+
+<p>最初のうちは<code>cd(1)</code>したあとに<code>pwd(1)</code>や<code>ls(1)</code>を実行し、自分がいまどこのディレクトリにいてそのディレクトリにはどのようなファイルがあるのかを常に把握しておく癖をつけておくと混乱しにくくなります。</p>
+
 <h2 id="mkdir">ディレクトリを作る</h2>
 <h2 id="rmdir">ディレクトリを消す</h2>
 <h2 id="less">ファイルの中身を見る</h2>
