--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
 <dl>
 <dt><a href="https://github.com/user340"><b>GitHub</b></a></dt>
 <dd>余暇で書いたコードはなるべくGitHubのリポジトリへpushすることにしています。</dd>
-<dt><a href="http://amzn.asia/8Dd8gHg"><b>Amazon Wish List</b></a></dt>
-<dd>Amazonの欲しいものリストです。</dd>
+<dt><a href="https://www.netbsd.org/~uki/"><b>uki@NetBSD.org</b></a></dt>
+<dd>NetBSD.orgのWebサーバ上で公開しているページです。</dd>
 </dl>
 
 <h2 id="free_documents">自由な文書の一覧</h2>
