--- a/introduction/index.html
+++ b/introduction/index.html
@@ -34,7 +34,7 @@
 <li><a href="./w3m.html">CUI Webブラウザ&mdash;&mdash;w3m</a></li>
 <li><a href="./firefox.html">GUI Webブラウザ&mdash;&mdash;Firefox</a></li></ol></li>
 <li>メーラ<ol><li><a href="./neomutt.html">CUIメーラ&mdash;&mdash;NeoMutt</a></li></ol></li></ol></li></ol></li>
-<li>Unixとテキストファイル</li>
+<li><a href="./unix_and_textfile.html">Unixとテキストファイル</a></li>
 <li>シェルまたはPythonによるプログラミング</li>
 <li><a href="./references.html">参考文献</a></li></ol>
 <hr>
