--- a/introduction/references.html
+++ b/introduction/references.html
@@ -10,6 +10,8 @@
 <h1>参考文献</h1>
 <hr>
 <dl>
+<dt><a href="https://shop.ohmsha.co.jp/shopdetail/000000000309/">Mike Gancarz, 芳尾 桂 訳,『UNIXという考え方』</a></dt>
+<dd>UNIX哲学「9の定理」と「10の小定理」を提示し、なぜUnix-likeなOSを使うのか？なぜUnix-likeなOSが便利なのか？という疑問への答えを提示してくれます。この本を読むと、コマンドライン上での操作やUnix上で動くソフトウェアの開発に対しどのようなアプローチをとるべきかという基本的な操作・設計・開発思想を理解できます。</dd>
 <dt><a href="https://wiki.archlinux.jp/">ArchWiki</a></dt>
 <dd>Linux DistributionのひとつArch LinuxのWikiですが、ソフトウェアの使い方や設定方法がかなり詳しく記載されています。パッケージのインストール手順はArch Linux固有の説明になっているのは当然ですが、「どのようなコマンドを実行すればいいか」「どのように設定を書いたらいいのか」はOSとは直接の関係はないはずなので、Arch Linuxユーザでなくても非常に有益な情報源です。</dd>
 <dt><a href="https://netbsd.org/docs/">NetBSD Documentation</a></dt>
