--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 <li><a href="./netbsd/thinkpad.html">NetBSD on ThinkPad</a></li>
 <li><a href="./netbsd/xen.html">Xenで準仮想化環境を構築する</a></li>
 <li><a href="./netbsd/haxm.html">QEMUとHAXMによるハイパーバイザの利用</a></li>
+<li><a href="./netbsd/nvmm.html">QEMUとNVMMによるハイパーバイザの利用</a></li>
 <li><a href="./netbsd/update_pkgsrc.html">pkg_comp(8)による安全なpkgsrc(7)パッケージの更新</a></li>
 <li><a href="./netbsd/pkgsrc-wip.html">pkgsrc-wip上での作業</a></li>
 <li><a href="./netbsd/pkg_install.html">pkg_installについて</a></li>
