--- a/netbsd/haxm.html
+++ b/netbsd/haxm.html
@@ -6,12 +6,12 @@
 <link rel="stylesheet" type="text/css" href="/css/my.css">
 <title>e-yuuki.org</title>
 </head>
-<body><div class="tiny">
+<body><article class="tiny">
 <h1>QEMUとHAXMによるハイパーバイザの利用</h1>
 <hr>
 <p>pkgsrc-2019Q1からemulators/haxmパッケージが提供されるようになりました。NetBSDでの仮想化環境は何のアクセラレータもないQEMUか、あるいはカーネルの入れ替えが必要なXenくらいしか選択肢がなかったように思えます。VMWareやVirtualBoxも動いていたようですがこれについてはよくわかりません。とにかく、ようやくNetBSDでもインストールしやすく高速な仮想化環境を使えるようになりました。</p>
 
-<h2 style=":not(h2)">目次</h2>
+<h2 class="">目次</h2>
 <ol><li><a href="#haxm">HAXMとは</a>
 <ol><li><a href="#upside">HAXMの利点</a></li>
 <li><a href="#downside">HAXMの欠点</a></li></ol></li>
@@ -174,5 +174,5 @@ qemu-system-x86_64: failed to initialize HAX: Operation not supported by device
 <div style="text-align:center;padding-top:2em;padding-bottom:2em;"><a rel="license" href="https://creativecommons.org/publicdomain/zero/1.0/"><img src="https://i.creativecommons.org/p/zero/1.0/88x31.png" alt="CC0" /></a></div>
 <p>To the extent possible under law, <a href="mailto:uki@e-yuuki.org">Yuuki Enomoto</a> has waived all copyright and related or neighboring rights to e-yuuki.org. This work is published from: Japan.</p>
 </footer>
-</div></body>
+</article></body>
 </html>
