--- a/introduction/openssh.html
+++ b/introduction/openssh.html
@@ -9,22 +9,19 @@
 <body><div class="tiny">
 <h1>リモートログイン&mdash;&mdash;OpenSSH</h1>
 <hr>
-<h2>目次</h2>
 <ol>
-  <li>インストール</li>
-  <li>SSHサーバ
-    <ol>
-      <li>サーバ側でSSHデーモンを実行する</li>
-      <li>クライアント側から接続テストをする</li>
-      <li>クライアント側で公開鍵と秘密鍵を作る</li>
-      <li>クライアント側の公開鍵をサーバ側にコピーする</li>
-      <li>サーバ側のホームディレクトリに認証用のファイルを作る</li>
-      <li>サーバ側でパスワード認証を禁止する</li>
-    </ol>
-  </li>
-  <li>どうしてもパスワード認証を禁止できない場合</li>
-  <li>その他SSHログインの認証として使えるもの</li>
-  <li>参考文献</li>
+<li>インストール</li>
+<li>SSHサーバ
+<ol><li>サーバ側でSSHデーモンを実行する</li>
+<li>クライアント側から接続テストをする</li>
+<li>クライアント側で公開鍵と秘密鍵を作る</li>
+<li>クライアント側の公開鍵をサーバ側にコピーする</li>
+<li>サーバ側のホームディレクトリに認証用のファイルを作る</li>
+<li>サーバ側でパスワード認証を禁止する</li></ol>
+</li>
+<li>どうしてもパスワード認証を禁止できない場合</li>
+<li>その他SSHログインの認証として使えるもの</li>
+<li>参考文献</li>
 </ol>
 <h2>インストール</h2>
 <p>NetBSD 8.0ではベースシステム（base.tgz）に含まれています。</p>
