--- a/introduction/clamav.html
+++ b/introduction/clamav.html
@@ -11,12 +11,9 @@
 <hr>
 <p>ClamAV&reg;はFLOSSのアンチウイルスエンジンです。WindowsやmacOS・GNU/Linux・BSD Unixで動作します。</p>
 
-<h2>目次</h2>
-<ol>
-  <li><a href="#install">インストール</a></li>
-  <li><a href="#config">設定ファイル&mdash;&mdash;/usr/pkg/etc/clamd.conf</a></li>
-  <li><a href="#ref">参考文献</a></li>
-</ol>
+<ol><li><a href="#install">インストール</a></li>
+<li><a href="#config">設定ファイル&mdash;&mdash;/usr/pkg/etc/clamd.conf</a></li>
+<li><a href="#ref">参考文献</a></li></ol>
 
 <h2 id="install">インストール</h2>
 <p><code>pkgsrc(7)</code>ではsecurity/clamavパッケージで提供されています。</p>
