nvmm: fix mis-closing tag

--- a/netbsd/nvmm.html
+++ b/netbsd/nvmm.html
@@ -59,7 +59,7 @@
 <b class="root">make install clean clean-depends</b></code></pre>
 
 <h2 id="howtouse">使い方</h2>
-<p>実行すべきコマンドラインについては『<a href="./haxm.html">QEMUとHAXMによるハイパーバイザの利用</a>』を参照してください。HAXMとの違いは、<code>accel</code>オプションに<code>nvmm</code>を指定する点です。動作テスト済みのゲストOSの一覧は『<i><a href="https://m00nbsd.net/4e0798b7f2620c965d0dd9d6a7a2f296.html">NVMM</a>』に載っています。</p>
+<p>実行すべきコマンドラインについては『<a href="./haxm.html">QEMUとHAXMによるハイパーバイザの利用</a>』を参照してください。HAXMとの違いは、<code>accel</code>オプションに<code>nvmm</code>を指定する点です。動作テスト済みのゲストOSの一覧は『<i><a href="https://m00nbsd.net/4e0798b7f2620c965d0dd9d6a7a2f296.html">NVMM</a></i>』に載っています。</p>
 
 <h2 id="references">参考文献</h2>
 <dl>
